<resources>
    <string name="location_access_required">Location access is required for LINKA to run properly.</string>
    <string name="location_access_required_desc">We\'ll use your location to help you find your LINKA lock and bike.</string>
    <string name="functionality_limited">Functionality limited</string>
    <string name="not_able_to_discover_lock">Since location access has not been granted, this app will not be able to discover LINKA locks.</string>
    <string name="not_support_google_play">This device does not support Google Play service. You may not be able to receive Push Notifications with this device.</string>
    <string name="sure_quit_fw_upgrade">Are you sure you want to quit firmware update now?</string>
    <string name="exit_app">Exit App?</string>
    <string name="select_language">Select Language</string>
    <string name="no_records">No Records</string>
    <string name="back_to_top">Back to top</string>
    <string name="crash_toast_text">crashed.</string>
    <string name="google_maps_api_key">AIzaSyCngZA_dRwk5D1xkXA7nNdgFEFLNpHhUrc</string>
    <string name="ble_not_supported">Bluetooth Low Energy Not Supported</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_status_initializing">Initializing&#8230;</string>
    <string name="dfu_status_connecting">Connecting&#8230;</string>
    <string name="dfu_status_starting">Starting Firmware Update&#8230;</string>
    <string name="dfu_status_switching_to_dfu">Preparing Firmware Installation&#8230;</string>
    <string name="dfu_status_uploading">Installing&#8230;</string>
    <string name="dfu_status_uploading_part">Uploading part %1$d/%1$d#8230;</string>
    <string name="dfu_status_validating">Validating&#8230;</string>
    <string name="dfu_status_disconnecting">Disconnecting&#8230;</string>
    <string name="dfu_status_completed">Installation Complete!</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborting">Aborting&#8230;</string>
    <string name="dfu_status_error">Installation failed</string>
    <string name="dfu_status_connecting_msg">Connecting to %s&#8230;</string>
    <string name="dfu_status_starting_msg">Initializing DFU process&#8230;</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader&#8230;</string>
    <string name="dfu_status_uploading_components_msg">Transmitting components to %s&#8230;</string>
    <string name="dfu_status_uploading_msg">Transmitting application to %s&#8230;</string>
    <string name="dfu_status_validating_msg">Validating&#8230;</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s&#8230;</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="faq_url">http://www.linkalock.com/faq</string>
    <string name="email_support_url">support@linkalock.com</string>
    <string name="report_a_bug_url" translatable="false">reportbug@linkalock.com</string>
    <string name="terms_url" translatable="false">http://www.linkalock.com/terms-conditions</string>
    <string name="privacy_url" translatable="false">http://www.linkalock.com/privacy-policy</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="location">Location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refresh">Refresh</string>
    <string name="scanning">scanning...</string>
    <string name="stop">stop</string>
    <string name="dismiss">Dismiss</string>
    <string name="reset">reset</string>
    <string name="search_for_linka">Search for LINKA</string>
    <string name="setup_linka">Setup LINKA</string>
    <string name="setup_linka_text">Make sure your new LINKA lock is powered on and in discovery mode (blinking blue indicator).</string>
    <string name="searching_for_linka">Searching for LINKA</string>
    <string name="new_bike_profile">New Bike Profile</string>
    <string name="create_new_bike_profile">Create new bike profile</string>
    <string name="bike_name">Bike Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="serial_number">Serial Number</string>
    <string name="my_linkas">My LINKA</string>
    <string name="my_bikes">PROFILE</string>
    <string name="notifications">Notifications</string>
    <string name="activity">Activity</string>
    <string name="activities">"ACTIVITIES"</string>
    <string name="users">USERS</string>
    <string name="settings">Settings</string>
    <string name="big_settings">SETTINGS</string>
    <string name="faqs">F.A.Q.s</string>
    <string name="chat_support">Chat Support</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="managedevices">Manage Devices</string>
    <string name="connect_to_a_new_linka">Connect a new Linka</string>
    <string name="new_linka">New LINKA</string>
    <string name="new_linka_cap">New LINKA</string>
    <string name="connected">CONNECTED</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="reconnect_to_linka">Reconnect to LINKA</string>
    <string name="connecting_to_linka">Connecting to LINKA...</string>
    <string name="no_connection">No Connection</string>
    <string name="linka_lock">LINKA Lock</string>
    <string name="battery_percent">%1$d%%</string>
    <string name="battery_days_remaining">approx. %1$d Days</string>
    <string name="delete_lock">Delete Lock</string>
    <string name="delete_lock_message">Are you sure you want to delete this lock?</string>
    <string name="audible_locking_unlocking">Audible Tones</string>
    <string name="auto_unlocking">Auto-Unlocking</string>
    <string name="phoneless_passcode">Phone-less Access Code</string>
    <string name="tamper_siren">Audible Alarm</string>
    <string name="sleep_notification">Sleep notification</string>
    <string name="led_display_when_locked">LED Display When Locked</string>
    <string name="battery_critically_low">Battery critically low</string>
    <string name="battery_low">Battery low</string>
    <string name="back_in_range_alert">Back in range</string>
    <string name="out_of_range_alert">Out of range</string>
    <string name="edit_lock_name">Edit Lock Name</string>
    <string name="edit_name">Edit Name</string>
    <string name="tamper_sensitivity">Tamper Sensitivity</string>
    <string name="sleep_settings">Battery Settings</string>
    <string name="your_lock_is">Your lock is</string>
    <string name="stall">Your bike has not been locked. Please check your bike!</string>
    <string name="warning">Warning</string>
    <string name="sleep_notification_desc">Your LINKA device has gone to sleep to conserve battery</string>
    <string name="audible_locking_unlocking_desc">Locking, Unlocking, Stalling, Connecting</string>
    <string name="auto_unlocking_desc">For convenient access when you approach within 1 meter</string>
    <string name="phoneless_passcode_desc">For convenient access when your phone is not present</string>
    <string name="tamper_siren_desc">Siren when bike is in danger</string>
    <string name="battery_critically_low_desc">Battery critically low</string>
    <string name="battery_low_desc">Battery low</string>
    <string name="back_in_range_alert_desc">Back in range</string>
    <string name="out_of_range_alert_desc">Out of range</string>
    <string name="pin_empty_val"> </string>
    <string name="pin_full_val">\u2022</string>
    <string name="enter_pin_text">Enter your Phone-less Access Code</string>
    <string name="reenter_pin_text">Re-enter your Phone-less Access Code</string>
    <string name="search">search</string>
    <string name="refresh_heat_map">refresh</string>
    <string name="tamper_warning">Tamper Warning!</string>
    <string name="temperature_warning">Temperature Warning!</string>
    <string name="tamper_text">Check your bike. It may be in danger!</string>
    <string name="temperature_text">Check your linka. It is overheating!</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="lock_is_taken_message">This lock is already associated with the bike: %s! would you like to remove it from that bike and associate it with this one?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="i_agree_to_tos">I agree to the </string>
    <string name="terms_link"><u>terms and conditions</u></string>
    <string name="create_account">Create Account</string>
    <string name="is_forgot"><u>Forgot password</u></string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="please_check_tos">Please check \'I\'ve read the terms and agreement\' box.</string>
    <string name="screen0">On Android we found Spotify causes some issues when updating firmware on LINKA. While we work on a solution, please follow these quick steps to complete your update!\n\nIf you have Spotify installed, go to Settings > Apps > Spotify > Force Stop</string>
    <string name="screen0_2">PROCEED</string>
    <string name="screen1">This wizard will go through the firmware update process</string>
    <string name="screen2">Start</string>
    <string name="screen3">1. Click the button below to set your LINKA Lock to Firmware Update Mode</string>
    <string name="screen4">2. Toggle off and on Bluetooth, and then click the button below</string>
    <string name="screen5">Next</string>
    <string name="screen6">Firmware update in progress. Please do not turn off the mobile device or LINKA lock.</string>
    <string name="screen7">3. The Firmware Update is done! Please turn off and on Bluetooth again, and then click the button below</string>
    <string name="screen8">Finish</string>
    <string name="reset_default">Reset to Default</string>
    <string name="tamper_sensitivity_desc">Set the sensitivity of your alarm and tamper alerts according to your location</string>
    <string name="metro">Metro</string>
    <string name="suburbs">Suburbs</string>
    <string name="garage">Garage</string>
    <string name="metro_desc">High population density and traffic; \n low alarm sensitivity</string>
    <string name="suburbs_desc">Quiet town/neighborhood with less traffic; \n medium alarm sensitivity</string>
    <string name="garage_desc">Low to no traffic with faint chances of contact; \n high alarm sensitivity</string>
    <string name="make_sure_device_unlocked">Please make sure your LINKA is unlocked and connected. Your LINKA device LED indicator should be blinking green.</string>
    <string name="i_don_t_see_my_device_connected"><u>I don\'t see my device connected</u></string>
    <string name="unlocked_connected_lets_go">Unlocked &amp; Connected, let\'s go!</string>
    <string name="confirm_led_is_purple">Your LINKA device is now reading for updating.\nConfirm LED indicator is purple.</string>
    <string name="not_see_it"><u>I don\'t see it, let\'s try again</u></string>
    <string name="i_see_purple">I see purple, let\'s go</string>
</resources>