<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blurry_scaled"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/step_0"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.linka.lockapp.aos.module.widget.LinkaTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/activity_horizontal_margin_big"
                    android:text="@string/screen0"
                    android:textColor="@color/linka_white" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dfu_disable_spotify" />

            </LinearLayout>

            <com.linka.lockapp.aos.module.widget.LinkaButton
                android:id="@+id/btn_step_0"
                style="@style/linka_button_nomargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin_big"
                android:text="@string/screen0_2" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.linka.lockapp.aos.module.widget.LinkaTextView
                android:textColor="@color/linka_white"
                android:text="@string/screen1"
                android:padding="@dimen/activity_horizontal_margin_big"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <com.linka.lockapp.aos.module.widget.LinkaButton
            android:id="@+id/btn_step_1"
            style="@style/linka_button_nomargin"
            android:text="@string/screen2"
            android:layout_margin="@dimen/activity_horizontal_margin_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.linka.lockapp.aos.module.widget.LinkaTextView
                android:textColor="@color/linka_white"
                android:text="@string/screen3"
                android:padding="@dimen/activity_horizontal_margin_big"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <com.linka.lockapp.aos.module.widget.LinkaButton
            android:id="@+id/btn_step_2"
            style="@style/linka_button_nomargin"
            android:text="@string/screen2"
            android:layout_margin="@dimen/activity_horizontal_margin_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.linka.lockapp.aos.module.widget.LinkaTextView
                    android:textColor="@color/linka_white"
                    android:text="@string/screen4"
                    android:padding="@dimen/activity_horizontal_margin_big"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/settings_page_turn_off_on_aos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <com.linka.lockapp.aos.module.widget.LinkaButton
            android:id="@+id/btn_step_3"
            style="@style/linka_button_nomargin"
            android:text="@string/screen5"
            android:layout_margin="@dimen/activity_horizontal_margin_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_4"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/linka_white"
            android:id="@+id/file_status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin_big"
            android:text="@string/screen6" />

        <TextView
            android:textColor="@color/linka_white"
            android:id="@+id/text_uploading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="Status" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="false"
            android:id="@+id/progress_bar"
            android:max="100"
            android:progress="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/linka_white"
            android:id="@+id/text_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_horizontal_margin_big" />

        <com.linka.lockapp.aos.module.widget.LinkaButton
            android:id="@+id/abort_btn"
            style="@style/linka_button_nomargin"
            android:text="@string/cancel"
            android:layout_margin="@dimen/activity_horizontal_margin_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.linka.lockapp.aos.module.widget.LinkaTextView
                android:textColor="@color/linka_white"
                android:text="@string/screen7"
                android:padding="@dimen/activity_horizontal_margin_big"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <com.linka.lockapp.aos.module.widget.LinkaButton
            android:id="@+id/btn_step_5"
            style="@style/linka_button_nomargin"
            android:text="@string/screen8"
            android:layout_margin="@dimen/activity_horizontal_margin_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
